# Games-in-Rust

./: .gitignore  Cargo.toml  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: codeql.yml  docker-image.yml  rust.yml
src/: main.rs
src/maze/: maze.rs  utils.rs
src/minesweeper/: minewseeper.rs  utils.rs
src/snake-game/: snake-game.rs  utils.rs
