[package]
name = "games-in-rust"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "A collection of games written in Rust"
readme = "README.md"
repository = "https://github.com/avcode-exe/Games-in-Rust"
keywords = ["games", "rust", "ncurses", "cli"]
homepage = "https://github.com/avcode-exe/Games-in-Rust"
authors = ["Liu Hong Yuan Tom"]

[dependencies]
ncurses = "5.101.0"
rand = "0.8.5"

[build]
target-dir = "target"
